fix(main): fix the button with class gray, and working with the proprty flex-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ button {
 
 header {
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 2;
     height: 5vh;
@@ -121,13 +122,13 @@ label {
 
 .columns {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
     margin-top: 30px;
 }
 
-.item {
-    flex-basis: calc( (100% / 3 ) - (30px / 3) );
+.columns .item {
+    flex-basis: calc( (100% / 3 ) - (30px / 3));
 }
 
 .border {
@@ -190,9 +191,13 @@ div.call-us > div:last-child {
 }
 
 .gray {
-    border: 1px solid #757575;
-    color: #757575;
+    border: 1px solid rgba(40, 40, 40, 1);
+    color: rgba(40, 40, 40, 1);
     padding: 5px 10px;
+}
+
+.gray:hover {
+    color: rgba(40, 40, 40, 0.5);
 }
 
 .colleague {
